[package]
name = "clynelish-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "time", "chrono", "bigdecimal"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
serde_repr = "0.1.19"

[[bin]]
name = "clynelish-backend"
path = "src/main.rs"